# big-data-assignment2

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
app/: .index.txt.crc  add_to_index.py  add_to_index.sh  app.py  app.sh  common.py  create_index.sh  e.parquet  index.sh  index.txt  prepare_data.py  prepare_data.sh  query.py  search.sh  settings.py  store_index.sh
app/data/: 10919645_Edward_N_Ament.txt  1101261_Eleonore_Reuss_of_Kstritz.txt  12335989_Ears_Open_Eyeballs_Click.txt  12364495_Edson_Tavares.txt  1343760_Elections_in_American_Samoa.txt  13480291_Elverum_Hndball.txt  1372886_Edward_Matthew_Ward.txt  1393057_East_Law.txt  14302107_Eddington_spacecraft.txt  14596696_Elling_Carlsen.txt  14819588_EIF2A.txt  14854893_Edmund_H_North.txt  1604969_Education_Program_for_Gifted_Youth.txt  1609074_Edinburgh_South_UK_Parliament_constituency.txt  16667158_Electrostatic_voltmeter.txt  16706554_Eedu.txt  1741221_Ellen_Bry.txt  1752159_ESEA.txt  1812290_Ely_railway_station.txt  18629230_El_Wak_Kenya.txt  18898615_Edwards_PlainDowses_Corner_Historic_District.txt  20152372_Emblem_of_the_Moldavian_Autonomous_Soviet_Socialist_Republic.txt  20485936_Earle_Brucker_Sr.txt  20862595_Emil_Leber.txt  21550137_Elysium_quadrangle.txt  2200760_Eimeria_tenella.txt  22773169_Ellyson.txt  23273916_Edith_Ronne_Land.txt  23686965_Eloge_Enza_Yamissi.txt  23886270_Elcocks_Brook.txt  25007967_Edgar_Gluck.txt  25515048_Edmund_Jones.txt  26332204_Eduardo_Ulibarri.txt  28331573_Edward_Walford.txt  28712592_Early_phase_of_printing_in_Calcutta.txt  (+65 more)
report/: report.md
(+2 files in other folders)
